Barcode/Face detection: reject requests in platforms where not implemented

This CL adds on_connection_error listeners to the mojo interface
pointers used for face/barcode detection. The connection error
handler is used to reject all Promises related to the given interface,
otherwise requests from Blink are neither resolved nor rejected (see bug).

BUG=668343
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2538053002
Cr-Commit-Position: refs/heads/master@{#435484}

Former-commit-id: 62beea5d8166bee43361033475448a0a08cd5bfa